src/objects/Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Hours__c</fullName>
        <label>Est. Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate_Lable__c</fullName>
        <label>Estimate Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGENCY</fullName>
                </value>
                <value>
                    <fullName>DRAFTING</fullName>
                </value>
                <value>
                    <fullName>ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>LAB TEST</fullName>
                </value>
                <value>
                    <fullName>MFG</fullName>
                </value>
                <value>
                    <fullName>MODEL SHOP</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SET UP</fullName>
                </value>
                <value>
                    <fullName>TOOLING;FIXTURES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_api_name__c</fullName>
        <label>Estimate api name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPA</label>
        <referenceTo>Factory_Pricing_Authorization__c</referenceTo>
        <relationshipName>Estimate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>$/Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPA Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Estimate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFO</label>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipName>Estimate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Format Costs</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Format Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>